src/latte/latteParser.g4
// -*- Java -*- This ANTLRv4 file was machine-generated by BNFC
parser grammar latteParser;

options {
  tokenVocab = latteLexer;
}

@members {
}

start_Prog returns [ latte.Absyn.Prog result ]
  : x=prog EOF
    { $result = $x.result; }
  ;

prog returns [ latte.Absyn.Prog result ]
  : p_1_1=listTopDef
    { $result = new latte.Absyn.Program($p_1_1.result); }
  ;
funct returns [ latte.Absyn.Funct result ]
  : p_1_1=type p_1_2=IDENT Surrogate_id_SYMB_0 p_1_4=listArg Surrogate_id_SYMB_1 p_1_6=block
    { $result = new latte.Absyn.Function($p_1_1.result,$p_1_2.getText(),$p_1_4.result,$p_1_6.result); }
  ;
topDef returns [ latte.Absyn.TopDef result ]
  : p_1_1=funct
    { $result = new latte.Absyn.FnDef($p_1_1.result); }
  | Surrogate_id_SYMB_29 p_2_2=IDENT p_2_3=clsBlock
    { $result = new latte.Absyn.ClassDef($p_2_2.getText(),$p_2_3.result); }
  | Surrogate_id_SYMB_29 p_3_2=IDENT Surrogate_id_SYMB_31 p_3_4=IDENT p_3_5=clsBlock
    { $result = new latte.Absyn.ClassDefExtend($p_3_2.getText(),$p_3_4.getText(),$p_3_5.result); }
  ;
listTopDef returns [ latte.Absyn.ListTopDef result ]
  : p_1_1=topDef
    { $result = new latte.Absyn.ListTopDef(); $result.addLast($p_1_1.result); }
  | p_2_1=topDef p_2_2=listTopDef
    { $result = $p_2_2.result; $result.addFirst($p_2_1.result); }
  ;
arg returns [ latte.Absyn.Arg result ]
  : p_1_1=type p_1_2=IDENT
    { $result = new latte.Absyn.Argument($p_1_1.result,$p_1_2.getText()); }
  ;
listArg returns [ latte.Absyn.ListArg result ]
  :  /* empty */
    { $result = new latte.Absyn.ListArg(); }
  | p_2_1=arg
    { $result = new latte.Absyn.ListArg(); $result.addLast($p_2_1.result); }
  | p_3_1=arg Surrogate_id_SYMB_2 p_3_3=listArg
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
clsBlock returns [ latte.Absyn.ClsBlock result ]
  : Surrogate_id_SYMB_3 p_1_2=listClsDef Surrogate_id_SYMB_4
    { $result = new latte.Absyn.ClassBlock($p_1_2.result); }
  ;
listClsDef returns [ latte.Absyn.ListClsDef result ]
  :  /* empty */
    { $result = new latte.Absyn.ListClsDef(); }
  | p_2_1=listClsDef p_2_2=clsDef
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
clsDef returns [ latte.Absyn.ClsDef result ]
  : p_1_1=clsAttr
    { $result = new latte.Absyn.ClassDefAttr($p_1_1.result); }
  | p_2_1=clsMethod
    { $result = new latte.Absyn.ClassDefMethod($p_2_1.result); }
  ;
clsMethod returns [ latte.Absyn.ClsMethod result ]
  : p_1_1=funct
    { $result = new latte.Absyn.ClassMethod($p_1_1.result); }
  ;
clsAttr returns [ latte.Absyn.ClsAttr result ]
  : p_1_1=type p_1_2=IDENT Surrogate_id_SYMB_5
    { $result = new latte.Absyn.ClassAttribute($p_1_1.result,$p_1_2.getText()); }
  ;
block returns [ latte.Absyn.Block result ]
  : Surrogate_id_SYMB_3 p_1_2=listStmt Surrogate_id_SYMB_4
    { $result = new latte.Absyn.BlockOfStatements($p_1_2.result); }
  ;
listStmt returns [ latte.Absyn.ListStmt result ]
  :  /* empty */
    { $result = new latte.Absyn.ListStmt(); }
  | p_2_1=listStmt p_2_2=stmt
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
stmt returns [ latte.Absyn.Stmt result ]
  : Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Empty(); }
  | p_2_1=block
    { $result = new latte.Absyn.BStmt($p_2_1.result); }
  | p_3_1=type p_3_2=listItem Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Decl($p_3_1.result,$p_3_2.result); }
  | p_4_1=IDENT Surrogate_id_SYMB_6 p_4_3=expr Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Ass($p_4_1.getText(),$p_4_3.result); }
  | p_5_1=IDENT Surrogate_id_SYMB_7 p_5_3=expr Surrogate_id_SYMB_8 Surrogate_id_SYMB_6 p_5_6=expr Surrogate_id_SYMB_5
    { $result = new latte.Absyn.AssArr($p_5_1.getText(),$p_5_3.result,$p_5_6.result); }
  | p_6_1=expr6 Surrogate_id_SYMB_9 p_6_3=IDENT Surrogate_id_SYMB_6 p_6_5=expr Surrogate_id_SYMB_5
    { $result = new latte.Absyn.AssAttr($p_6_1.result,$p_6_3.getText(),$p_6_5.result); }
  | p_7_1=IDENT Surrogate_id_SYMB_10 Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Incr($p_7_1.getText()); }
  | p_8_1=IDENT Surrogate_id_SYMB_11 Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Decr($p_8_1.getText()); }
  | Surrogate_id_SYMB_37 p_9_2=expr Surrogate_id_SYMB_5
    { $result = new latte.Absyn.Ret($p_9_2.result); }
  | Surrogate_id_SYMB_37 Surrogate_id_SYMB_5
    { $result = new latte.Absyn.VRet(); }
  | Surrogate_id_SYMB_34 Surrogate_id_SYMB_0 p_11_3=expr Surrogate_id_SYMB_1 p_11_5=stmt
    { $result = new latte.Absyn.Cond($p_11_3.result,$p_11_5.result); }
  | Surrogate_id_SYMB_34 Surrogate_id_SYMB_0 p_12_3=expr Surrogate_id_SYMB_1 p_12_5=stmt Surrogate_id_SYMB_30 p_12_7=stmt
    { $result = new latte.Absyn.CondElse($p_12_3.result,$p_12_5.result,$p_12_7.result); }
  | Surrogate_id_SYMB_41 Surrogate_id_SYMB_0 p_13_3=expr Surrogate_id_SYMB_1 p_13_5=stmt
    { $result = new latte.Absyn.While($p_13_3.result,$p_13_5.result); }
  | Surrogate_id_SYMB_33 Surrogate_id_SYMB_0 p_14_3=arg Surrogate_id_SYMB_12 p_14_5=expr Surrogate_id_SYMB_1 p_14_7=stmt
    { $result = new latte.Absyn.For($p_14_3.result,$p_14_5.result,$p_14_7.result); }
  | p_15_1=expr Surrogate_id_SYMB_5
    { $result = new latte.Absyn.SExp($p_15_1.result); }
  ;
item returns [ latte.Absyn.Item result ]
  : p_1_1=IDENT
    { $result = new latte.Absyn.NoInit($p_1_1.getText()); }
  | p_2_1=IDENT Surrogate_id_SYMB_6 p_2_3=expr
    { $result = new latte.Absyn.Init($p_2_1.getText(),$p_2_3.result); }
  ;
listItem returns [ latte.Absyn.ListItem result ]
  : p_1_1=item
    { $result = new latte.Absyn.ListItem(); $result.addLast($p_1_1.result); }
  | p_2_1=item Surrogate_id_SYMB_2 p_2_3=listItem
    { $result = $p_2_3.result; $result.addFirst($p_2_1.result); }
  ;
primitiveType returns [ latte.Absyn.PrimitiveType result ]
  : Surrogate_id_SYMB_35
    { $result = new latte.Absyn.Int(); }
  | Surrogate_id_SYMB_38
    { $result = new latte.Absyn.Str(); }
  | Surrogate_id_SYMB_28
    { $result = new latte.Absyn.Bool(); }
  | Surrogate_id_SYMB_40
    { $result = new latte.Absyn.Void(); }
  ;
classType returns [ latte.Absyn.ClassType result ]
  : p_1_1=IDENT
    { $result = new latte.Absyn.ClassT($p_1_1.getText()); }
  ;
type returns [ latte.Absyn.Type result ]
  : p_1_1=type Surrogate_id_SYMB_13
    { $result = new latte.Absyn.ArrayT($p_1_1.result); }
  | p_2_1=primitiveType
    { $result = new latte.Absyn.Primitive($p_2_1.result); }
  | p_3_1=classType
    { $result = new latte.Absyn.Class($p_3_1.result); }
  ;
listType returns [ latte.Absyn.ListType result ]
  :  /* empty */
    { $result = new latte.Absyn.ListType(); }
  | p_2_1=type
    { $result = new latte.Absyn.ListType(); $result.addLast($p_2_1.result); }
  | p_3_1=type Surrogate_id_SYMB_2 p_3_3=listType
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
expr6 returns [ latte.Absyn.Expr result ]
  : Surrogate_id_SYMB_36 p_1_2=type Surrogate_id_SYMB_7 p_1_4=expr Surrogate_id_SYMB_8
    { $result = new latte.Absyn.ENewArray($p_1_2.result,$p_1_4.result); }
  | Surrogate_id_SYMB_36 p_2_2=IDENT
    { $result = new latte.Absyn.ENewObject($p_2_2.getText()); }
  | p_3_1=IDENT
    { $result = new latte.Absyn.EVar($p_3_1.getText()); }
  | p_4_1=IDENT Surrogate_id_SYMB_7 p_4_3=expr Surrogate_id_SYMB_8
    { $result = new latte.Absyn.EArrayElem($p_4_1.getText(),$p_4_3.result); }
  | p_5_1=INTEGER
    { $result = new latte.Absyn.ELitInt(Integer.parseInt($p_5_1.getText())); }
  | Surrogate_id_SYMB_39
    { $result = new latte.Absyn.ELitTrue(); }
  | Surrogate_id_SYMB_32
    { $result = new latte.Absyn.ELitFalse(); }
  | p_8_1=expr6 Surrogate_id_SYMB_9 p_8_3=IDENT
    { $result = new latte.Absyn.EAttr($p_8_1.result,$p_8_3.getText()); }
  | p_9_1=expr6 Surrogate_id_SYMB_9 p_9_3=IDENT Surrogate_id_SYMB_0 p_9_5=listExpr Surrogate_id_SYMB_1
    { $result = new latte.Absyn.EMethod($p_9_1.result,$p_9_3.getText(),$p_9_5.result); }
  | p_10_1=IDENT Surrogate_id_SYMB_0 p_10_3=listExpr Surrogate_id_SYMB_1
    { $result = new latte.Absyn.EApp($p_10_1.getText(),$p_10_3.result); }
  | Surrogate_id_SYMB_0 p_11_2=type Surrogate_id_SYMB_1 p_11_4=expr6
    { $result = new latte.Absyn.ECast($p_11_2.result,$p_11_4.result); }
  | p_12_1=STRING
    { $result = new latte.Absyn.EString($p_12_1.getText().substring(1, $p_12_1.getText().length()-1)); }
  | Surrogate_id_SYMB_0 p_13_2=expr Surrogate_id_SYMB_1
    { $result = $p_13_2.result; }
  ;
expr5 returns [ latte.Absyn.Expr result ]
  : Surrogate_id_SYMB_14 p_1_2=expr6
    { $result = new latte.Absyn.Neg($p_1_2.result); }
  | Surrogate_id_SYMB_15 p_2_2=expr6
    { $result = new latte.Absyn.Not($p_2_2.result); }
  | p_3_1=expr6
    { $result = $p_3_1.result; }
  ;
expr4 returns [ latte.Absyn.Expr result ]
  : p_1_1=expr4 p_1_2=mulOp p_1_3=expr5
    { $result = new latte.Absyn.EMul($p_1_1.result,$p_1_2.result,$p_1_3.result); }
  | p_2_1=expr5
    { $result = $p_2_1.result; }
  ;
expr3 returns [ latte.Absyn.Expr result ]
  : p_1_1=expr3 p_1_2=addOp p_1_3=expr4
    { $result = new latte.Absyn.EAdd($p_1_1.result,$p_1_2.result,$p_1_3.result); }
  | p_2_1=expr4
    { $result = $p_2_1.result; }
  ;
expr2 returns [ latte.Absyn.Expr result ]
  : p_1_1=expr2 p_1_2=relOp p_1_3=expr3
    { $result = new latte.Absyn.ERel($p_1_1.result,$p_1_2.result,$p_1_3.result); }
  | p_2_1=expr3
    { $result = $p_2_1.result; }
  ;
expr1 returns [ latte.Absyn.Expr result ]
  : p_1_1=expr2 Surrogate_id_SYMB_16 p_1_3=expr1
    { $result = new latte.Absyn.EAnd($p_1_1.result,$p_1_3.result); }
  | p_2_1=expr2
    { $result = $p_2_1.result; }
  ;
expr returns [ latte.Absyn.Expr result ]
  : p_1_1=expr1 Surrogate_id_SYMB_17 p_1_3=expr
    { $result = new latte.Absyn.EOr($p_1_1.result,$p_1_3.result); }
  | p_2_1=expr1
    { $result = $p_2_1.result; }
  ;
listExpr returns [ latte.Absyn.ListExpr result ]
  :  /* empty */
    { $result = new latte.Absyn.ListExpr(); }
  | p_2_1=expr
    { $result = new latte.Absyn.ListExpr(); $result.addLast($p_2_1.result); }
  | p_3_1=expr Surrogate_id_SYMB_2 p_3_3=listExpr
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
addOp returns [ latte.Absyn.AddOp result ]
  : Surrogate_id_SYMB_18
    { $result = new latte.Absyn.Plus(); }
  | Surrogate_id_SYMB_14
    { $result = new latte.Absyn.Minus(); }
  ;
mulOp returns [ latte.Absyn.MulOp result ]
  : Surrogate_id_SYMB_19
    { $result = new latte.Absyn.Times(); }
  | Surrogate_id_SYMB_20
    { $result = new latte.Absyn.Div(); }
  | Surrogate_id_SYMB_21
    { $result = new latte.Absyn.Mod(); }
  ;
relOp returns [ latte.Absyn.RelOp result ]
  : Surrogate_id_SYMB_22
    { $result = new latte.Absyn.LTH(); }
  | Surrogate_id_SYMB_23
    { $result = new latte.Absyn.LE(); }
  | Surrogate_id_SYMB_24
    { $result = new latte.Absyn.GTH(); }
  | Surrogate_id_SYMB_25
    { $result = new latte.Absyn.GE(); }
  | Surrogate_id_SYMB_26
    { $result = new latte.Absyn.EQU(); }
  | Surrogate_id_SYMB_27
    { $result = new latte.Absyn.NE(); }
  ;
