src/latte/latteParser.java
// Generated from latte/latteParser.g4 by ANTLR 4.8
package latte;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class latteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Surrogate_id_SYMB_0=1, Surrogate_id_SYMB_1=2, Surrogate_id_SYMB_2=3, Surrogate_id_SYMB_3=4, 
		Surrogate_id_SYMB_4=5, Surrogate_id_SYMB_5=6, Surrogate_id_SYMB_6=7, Surrogate_id_SYMB_7=8, 
		Surrogate_id_SYMB_8=9, Surrogate_id_SYMB_9=10, Surrogate_id_SYMB_10=11, 
		Surrogate_id_SYMB_11=12, Surrogate_id_SYMB_12=13, Surrogate_id_SYMB_13=14, 
		Surrogate_id_SYMB_14=15, Surrogate_id_SYMB_15=16, Surrogate_id_SYMB_16=17, 
		Surrogate_id_SYMB_17=18, Surrogate_id_SYMB_18=19, Surrogate_id_SYMB_19=20, 
		Surrogate_id_SYMB_20=21, Surrogate_id_SYMB_21=22, Surrogate_id_SYMB_22=23, 
		Surrogate_id_SYMB_23=24, Surrogate_id_SYMB_24=25, Surrogate_id_SYMB_25=26, 
		Surrogate_id_SYMB_26=27, Surrogate_id_SYMB_27=28, Surrogate_id_SYMB_28=29, 
		Surrogate_id_SYMB_29=30, Surrogate_id_SYMB_30=31, Surrogate_id_SYMB_31=32, 
		Surrogate_id_SYMB_32=33, Surrogate_id_SYMB_33=34, Surrogate_id_SYMB_34=35, 
		Surrogate_id_SYMB_35=36, Surrogate_id_SYMB_36=37, Surrogate_id_SYMB_37=38, 
		Surrogate_id_SYMB_38=39, Surrogate_id_SYMB_39=40, Surrogate_id_SYMB_40=41, 
		Surrogate_id_SYMB_41=42, COMMENT_antlr_builtin=43, MULTICOMMENT_antlr_builtin=44, 
		INTEGER=45, IDENT=46, WS=47, ErrorToken=48, STRING=49, STRINGESC=50;
	public static final int
		RULE_start_Prog = 0, RULE_prog = 1, RULE_funct = 2, RULE_topDef = 3, RULE_listTopDef = 4, 
		RULE_arg = 5, RULE_listArg = 6, RULE_clsBlock = 7, RULE_listClsDef = 8, 
		RULE_clsDef = 9, RULE_clsMethod = 10, RULE_clsAttr = 11, RULE_block = 12, 
		RULE_listStmt = 13, RULE_stmt = 14, RULE_item = 15, RULE_listItem = 16, 
		RULE_primitiveType = 17, RULE_classType = 18, RULE_type = 19, RULE_listType = 20, 
		RULE_expr6 = 21, RULE_expr5 = 22, RULE_expr4 = 23, RULE_expr3 = 24, RULE_expr2 = 25, 
		RULE_expr1 = 26, RULE_expr = 27, RULE_listExpr = 28, RULE_addOp = 29, 
		RULE_mulOp = 30, RULE_relOp = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_Prog", "prog", "funct", "topDef", "listTopDef", "arg", "listArg", 
			"clsBlock", "listClsDef", "clsDef", "clsMethod", "clsAttr", "block", 
			"listStmt", "stmt", "item", "listItem", "primitiveType", "classType", 
			"type", "listType", "expr6", "expr5", "expr4", "expr3", "expr2", "expr1", 
			"expr", "listExpr", "addOp", "mulOp", "relOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'{'", "'}'", "';'", "'='", "'['", "']'", 
			"'.'", "'++'", "'--'", "':'", "'[]'", "'-'", "'!'", "'&&'", "'||'", "'+'", 
			"'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'boolean'", 
			"'class'", "'else'", "'extends'", "'false'", "'for'", "'if'", "'int'", 
			"'new'", "'return'", "'string'", "'true'", "'void'", "'while'", null, 
			null, null, null, null, null, "'\"'", "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", "Surrogate_id_SYMB_2", 
			"Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5", 
			"Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", "Surrogate_id_SYMB_8", 
			"Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", "Surrogate_id_SYMB_11", 
			"Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", "Surrogate_id_SYMB_14", 
			"Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", "Surrogate_id_SYMB_17", 
			"Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", "Surrogate_id_SYMB_20", 
			"Surrogate_id_SYMB_21", "Surrogate_id_SYMB_22", "Surrogate_id_SYMB_23", 
			"Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25", "Surrogate_id_SYMB_26", 
			"Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", "Surrogate_id_SYMB_29", 
			"Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", "Surrogate_id_SYMB_32", 
			"Surrogate_id_SYMB_33", "Surrogate_id_SYMB_34", "Surrogate_id_SYMB_35", 
			"Surrogate_id_SYMB_36", "Surrogate_id_SYMB_37", "Surrogate_id_SYMB_38", 
			"Surrogate_id_SYMB_39", "Surrogate_id_SYMB_40", "Surrogate_id_SYMB_41", 
			"COMMENT_antlr_builtin", "MULTICOMMENT_antlr_builtin", "INTEGER", "IDENT", 
			"WS", "ErrorToken", "STRING", "STRINGESC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "latteParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public latteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Start_ProgContext extends ParserRuleContext {
		public latte.Absyn.Prog result;
		public ProgContext x;
		public TerminalNode EOF() { return getToken(latteParser.EOF, 0); }
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public Start_ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_Prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterStart_Prog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitStart_Prog(this);
		}
	}

	public final Start_ProgContext start_Prog() throws RecognitionException {
		Start_ProgContext _localctx = new Start_ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_Prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			((Start_ProgContext)_localctx).x = prog();
			setState(65);
			match(EOF);
			 ((Start_ProgContext)_localctx).result =  ((Start_ProgContext)_localctx).x.result; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public latte.Absyn.Prog result;
		public ListTopDefContext p_1_1;
		public ListTopDefContext listTopDef() {
			return getRuleContext(ListTopDefContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((ProgContext)_localctx).p_1_1 = listTopDef();
			 ((ProgContext)_localctx).result =  new latte.Absyn.Program(((ProgContext)_localctx).p_1_1.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctContext extends ParserRuleContext {
		public latte.Absyn.Funct result;
		public TypeContext p_1_1;
		public Token p_1_2;
		public ListArgContext p_1_4;
		public BlockContext p_1_6;
		public TerminalNode Surrogate_id_SYMB_0() { return getToken(latteParser.Surrogate_id_SYMB_0, 0); }
		public TerminalNode Surrogate_id_SYMB_1() { return getToken(latteParser.Surrogate_id_SYMB_1, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(latteParser.IDENT, 0); }
		public ListArgContext listArg() {
			return getRuleContext(ListArgContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterFunct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitFunct(this);
		}
	}

	public final FunctContext funct() throws RecognitionException {
		FunctContext _localctx = new FunctContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((FunctContext)_localctx).p_1_1 = type(0);
			setState(72);
			((FunctContext)_localctx).p_1_2 = match(IDENT);
			setState(73);
			match(Surrogate_id_SYMB_0);
			setState(74);
			((FunctContext)_localctx).p_1_4 = listArg();
			setState(75);
			match(Surrogate_id_SYMB_1);
			setState(76);
			((FunctContext)_localctx).p_1_6 = block();
			 ((FunctContext)_localctx).result =  new latte.Absyn.Function(((FunctContext)_localctx).p_1_1.result,((FunctContext)_localctx).p_1_2.getText(),((FunctContext)_localctx).p_1_4.result,((FunctContext)_localctx).p_1_6.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopDefContext extends ParserRuleContext {
		public latte.Absyn.TopDef result;
		public FunctContext p_1_1;
		public Token p_2_2;
		public ClsBlockContext p_2_3;
		public Token p_3_2;
		public Token p_3_4;
		public ClsBlockContext p_3_5;
		public FunctContext funct() {
			return getRuleContext(FunctContext.class,0);
		}
		public TerminalNode Surrogate_id_SYMB_29() { return getToken(latteParser.Surrogate_id_SYMB_29, 0); }
		public List<TerminalNode> IDENT() { return getTokens(latteParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(latteParser.IDENT, i);
		}
		public ClsBlockContext clsBlock() {
			return getRuleContext(ClsBlockContext.class,0);
		}
		public TerminalNode Surrogate_id_SYMB_31() { return getToken(latteParser.Surrogate_id_SYMB_31, 0); }
		public TopDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterTopDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitTopDef(this);
		}
	}

	public final TopDefContext topDef() throws RecognitionException {
		TopDefContext _localctx = new TopDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topDef);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((TopDefContext)_localctx).p_1_1 = funct();
				 ((TopDefContext)_localctx).result =  new latte.Absyn.FnDef(((TopDefContext)_localctx).p_1_1.result); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(Surrogate_id_SYMB_29);
				setState(83);
				((TopDefContext)_localctx).p_2_2 = match(IDENT);
				setState(84);
				((TopDefContext)_localctx).p_2_3 = clsBlock();
				 ((TopDefContext)_localctx).result =  new latte.Absyn.ClassDef(((TopDefContext)_localctx).p_2_2.getText(),((TopDefContext)_localctx).p_2_3.result); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(Surrogate_id_SYMB_29);
				setState(88);
				((TopDefContext)_localctx).p_3_2 = match(IDENT);
				setState(89);
				match(Surrogate_id_SYMB_31);
				setState(90);
				((TopDefContext)_localctx).p_3_4 = match(IDENT);
				setState(91);
				((TopDefContext)_localctx).p_3_5 = clsBlock();
				 ((TopDefContext)_localctx).result =  new latte.Absyn.ClassDefExtend(((TopDefContext)_localctx).p_3_2.getText(),((TopDefContext)_localctx).p_3_4.getText(),((TopDefContext)_localctx).p_3_5.result); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListTopDefContext extends ParserRuleContext {
		public latte.Absyn.ListTopDef result;
		public TopDefContext p_1_1;
		public TopDefContext p_2_1;
		public ListTopDefContext p_2_2;
		public TopDefContext topDef() {
			return getRuleContext(TopDefContext.class,0);
		}
		public ListTopDefContext listTopDef() {
			return getRuleContext(ListTopDefContext.class,0);
		}
		public ListTopDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listTopDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterListTopDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitListTopDef(this);
		}
	}

	public final ListTopDefContext listTopDef() throws RecognitionException {
		ListTopDefContext _localctx = new ListTopDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listTopDef);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				((ListTopDefContext)_localctx).p_1_1 = topDef();
				 ((ListTopDefContext)_localctx).result =  new latte.Absyn.ListTopDef(); _localctx.result.addLast(((ListTopDefContext)_localctx).p_1_1.result); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				((ListTopDefContext)_localctx).p_2_1 = topDef();
				setState(100);
				((ListTopDefContext)_localctx).p_2_2 = listTopDef();
				 ((ListTopDefContext)_localctx).result =  ((ListTopDefContext)_localctx).p_2_2.result; _localctx.result.addFirst(((ListTopDefContext)_localctx).p_2_1.result); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public latte.Absyn.Arg result;
		public TypeContext p_1_1;
		public Token p_1_2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(latteParser.IDENT, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof latteParserListener ) ((latteParserListener)listener).exitArg(this);
		}
	}
